Apply edit select menu visibility fix to Chrome/Chromium in Linux too (previously IE only)

--- a/style/ie.css
+++ b/style/ie.css
@@ -24,7 +24,10 @@
 /* Fix: select menus from not registering as hovered */
 .ie.editing .block .section_add_menus,
 .ie.editing .section .section_add_menus,
-.ie.editing .sitetopic .section_add_menus {
+.ie.editing .sitetopic .section_add_menus,
+.safari.linux.editing .block .section_add_menus,
+.safari.linux.editing .section .section_add_menus,
+.safari.linux.editing .sitetopic .section_add_menus {
     visibility: visible;
     filter: none;
     opacity: 1;
